fix: update body overflow-x property from hidden to clip

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,7 +122,7 @@
 html,
 body {
   max-width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
